# cpp-consistent-hashing-algorithms

./: .gitignore  CMakeLists.txt  README.md  balance.cpp  cmake.sh  cmake_setup.sh  main.cpp  mashtable_test.cpp  monotonicity.cpp  repo.sh  repo_setup.sh  setup.sh  speed_test.cpp  utils.cpp  utils.h  vcpkg.json
algorithms/anchor/: AnchorHashQre.cpp  anchorengine.h
algorithms/dx/: DxEngine.h  DxHash.cpp  DxHash.h  DxHash.hpp
algorithms/jump/: jumpengine.h
algorithms/maglev/: MaglevHash.cpp  MaglevHash.h
algorithms/memento/: mashtable.h  mementoengine.h
algorithms/misc/: ConsistentHash.h  ConsistentHash.hpp  HashFunctions.h  crc32.h  crc32c_sse42_u64.h
algorithms/power/: powerengine.h
algorithms/ring/: RingHash.cpp  RingHash.h
anchor/: AnchorHashQre.cpp  AnchorHashQre.hpp  anchorengine.h
anchor/misc/: crc32c_sse42_u64.h
benchmark/: Benchmark.cpp  Benchmark.h
benchmarks/: Balance.h  Benchmark.cpp  Benchmark.h  InitTime.h  LookupTime.h  MemoryUsage.h  Monotonicity.cpp  Monotonicity.h  ResizeBalance.h  ResizeTime.h  Routine.h  SpeedTest.cpp
binomial/: binomialengine.h
configs/: config.yaml  default.yaml
dx/: DxEngine.h  DxHash.cpp  DxHash.h
jump/: jumpengine.h
maglev/: MaglevEngine.h  MaglevHash.cpp  MaglevHash.h
memento/: mashtable.h  memento.h  mementoengine.h  mementoneengine.h
misc/: ConsistentHash.h  crc32c_sse42_u64.h
power/: powerengine.h
ring/: RingEngine.h  RingHash.cpp  RingHash.h
tools/: balance.cpp  mashtable_test.cpp  monotonicity.cpp  speed_test.cpp
utils/: AlgorithmsASCII.h
